# AI-SHA

./: .gitignore  CHANGELOG.md  LICENSE  README.md  imanidiot.txt  mecanum_params.yaml
RaspberryPi/: bno055.py
Ros_2_nodes/: imu_node.py
automators/: lambdacli.py
config/: fastdds_env.sh  fastdds_jetson.xml  fastdds_ws.xml
jetson/robot_description/: package.xml
llm_node/: package.xml  setup.py
llm_node/launch/: llm_sabis.launch.py
llm_node/llm_node/: chess_handler.py  llm_node.py  llm_node.py.backup  llm_node_api.py  llm_node_gemini.py
llm_node/prompts/: sabis_robot_concise.txt  sabis_robot_system.txt
plant_disease_training/: patch_yolov8_node.py
robot_brain/: package.xml
robot_brain/config/: farm_brain_config.yaml  farm_locations.json
robot_brain/launch/: farm_brain.launch.py
robot_brain/robot_brain/: farm_brain.py  robot_brain.py
robot_bringup/: setup.py
robot_bringup/config/: ekf.yaml  slam_toolbox.yaml  slam_toolbox_simple.yaml
robot_bringup/launch/: slam.launch.py
robot_bringup/robot_bringup/: dummy_odom.py
ros-rpi5/ros2_ws/src/bno055_imu/: CMakeLists.txt  setup.py
ros-rpi5/ros2_ws/src/bno055_imu/bno055_imu/: bno055_node.py
scripts/: generate_fastdds_configs.sh
src/bno055_imu/: README.md
src/llm_display/: package.xml
src/mecanum_driver/: README.md  setup.py
src/motor_control/: package.xml
src/robot_display/: package.xml  setup.py
src/speaker_monitor/: package.xml
src/tts_elevenlabs/: package.xml
stt_node/: package.xml
stt_node/stt_node/: stt_assemblyai.py  stt_node.py  stt_node_api.py  (+3 more)
yolov8_ros/: package.xml
(+137 files in other folders)
